--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,6 +3,6 @@
 
 <ol>
  <% @restaurants.each do |restaurant| %>
-   <li><%= restaurant.name %></li>
+   <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
  <% end %>
 </ol>
