--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,3 +6,5 @@
    <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
  <% end %>
 </ol>
+
+<%= link_to "create a new restaurant", restaurants_new_path %>
